--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -21,59 +21,29 @@
 <div class="container">
     <section id="about">
         <h2>About Me</h2>
-        <p class="quote">"I aspire to become a Cloud Engineer, leveraging technology to build scalable and efficient solutions."</p>
+        <p class="quote">"I aspire to become a Cloud Engineer, leveraging technology to build scalable and efficient
+            solutions."</p>
     </section>
+
     <section id="projects">
         <h2>Projects</h2>
-        <div class="card">
-            <h3 class="project-title">Personal Portfolio</h3>
-            <p>
-                <a href="https://github.com/cosmin-pandeleanu/cosmin-pandeleanu" target="_blank" class="project-link">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" class="project-icon">
-                    Link to Project
-                </a>
-            </p>
-            <p>
-                Technologies:
-                <span class="tech-tag">AWS S3</span>
-                <span class="tech-tag">Github Actions</span>
-            </p>
-        </div>
+        <div id="projects-container"></div>
     </section>
+
     <section id="certifications">
         <h2>Certifications</h2>
-        <div class="card">
-            <div class="cert-header">
-                <img src="assets/img/aws-logo.png" alt="AWS Logo" class="cert-logo">
-                <h3 class="cert-title">AWS Certified Cloud Practitioner</h3>
-            </div>
-            <p class="cert-details">
-                <a href="https://www.credly.com/badges/bec54ccf-73b3-4a2a-a932-18816863d049/linked_in_profile" target="_blank" class="credential-url">
-                    🎖️ Credential URL
-                </a>  &nbsp; | &nbsp;
-                <span class="issued-date">📅 Issued: Apr 2024</span> &nbsp; | &nbsp;
-                <span class="expiry-date">⏳ Expires: Apr 2027</span>
-            </p>
-        </div>
-        <div class="card">
-            <div class="cert-header">
-                <img src="assets/img/azure-logo.png" alt="Azure Logo" class="cert-logo">
-                <h3 class="cert-title">Microsoft Certified: Azure Fundamentals (AZ-900)</h3>
-            </div>
-            <p class="cert-details">
-                <a href="https://learn.microsoft.com/api/credentials/share/en-gb/PandeleanuCosminConstantin-9804/5381DEB87EBC0F51?sharingId" target="_blank" class="credential-url">
-                    🎖️ Credential URL
-                </a> &nbsp; | &nbsp;
-                <span class="issued-date">📅 Issued: Feb 2025</span>
-            </p>
-        </div>
+        <div id="certifications-container"></div>
     </section>
+
     <section id="contact">
         <h2>Contact</h2>
         <div class="card">
-            <p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:pandeleanu.cosmin@yahoo.com">pandeleanu.cosmin@yahoo.com</a></p>
-            <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/pandeleanu-cosmin-constantin/" target="_blank">LinkedIn Profile</a></p>
-            <p><i class="fa-brands fa-github"></i> <a href="https://github.com/cosmin-pandeleanu" target="_blank">GitHub Profile</a></p>
+            <p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:pandeleanu.cosmin@yahoo.com">pandeleanu.cosmin@yahoo.com</a>
+            </p>
+            <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/pandeleanu-cosmin-constantin/"
+                                                        target="_blank">LinkedIn Profile</a></p>
+            <p><i class="fa-brands fa-github"></i> <a href="https://github.com/cosmin-pandeleanu" target="_blank">GitHub
+                Profile</a></p>
         </div>
     </section>
 </div>
@@ -82,6 +52,53 @@
 </footer>
 <script>
     document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Load data from JSON
+    fetch('assets/data/projects.json')
+        .then(res => res.json())
+        .then(data => {
+            const container = document.getElementById('projects-container');
+            data.projects.forEach(project => {
+                const card = document.createElement('div');
+                card.className = 'card';
+                card.innerHTML = `
+                    <h3 class="project-title">${project.title}</h3>
+                    <p>
+                        <a href="${project.link}" target="_blank" class="project-link">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" class="project-icon">
+                            Link to Project
+                        </a>
+                    </p>
+                    <p>
+                        Technologies:
+                        ${project.technologies.map(tech => `<span class="tech-tag">${tech}</span>`).join(' ')}
+                    </p>
+                `;
+                container.appendChild(card);
+            });
+        });
+
+    fetch('assets/data/certifications.json')
+        .then(res => res.json())
+        .then(data => {
+            const container = document.getElementById('certifications-container');
+            data.certifications.forEach(cert => {
+                const card = document.createElement('div');
+                card.className = 'card';
+                card.innerHTML = `
+                    <div class="cert-header">
+                        <img src="${cert.logo}" alt="${cert.title} Logo" class="cert-logo">
+                        <h3 class="cert-title">${cert.title}</h3>
+                    </div>
+                    <p class="cert-details">
+                        <a href="${cert.url}" target="_blank" class="credential-url">🎖️ Credential URL</a>
+                        ${cert.issued ? ` &nbsp; | &nbsp; <span class="issued-date">📅 Issued: ${cert.issued}</span>` : ''}
+                        ${cert.expires ? ` &nbsp; | &nbsp; <span class="expiry-date">⏳ Expires: ${cert.expires}</span>` : ''}
+                    </p>
+                `;
+                container.appendChild(card);
+            });
+        });
 </script>
 </body>
 </html>
